# project1

Project1_Starter_Code/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.h  DataBase.cpp  DataBase.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  LComAutomaton.cpp  LComAutomaton.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_MarkAutomaton.h  QueriesAutomaton.h  Relation.cpp  Relation.h  Right_ParenAutomaton.cpp  Right_ParenAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.h  (+12 more)
